--- a/style.css
+++ b/style.css
@@ -110,3 +110,81 @@ body{
     line-height: 300px;
     font-size: 30px;
 }
+/*=====================================================================*/
+/*=============styles Katya====== posts, adv blocks, authors==========*/
+/*===================================================================*/
+
+.margin-top-40{
+    margin-top: 40px;
+}
+
+.margin-bot-40{
+    margin-bottom: 40px;
+}
+
+.margin-bot-16{
+    margin-bottom: 16px;
+}
+
+.pink{
+    color: #ff008a;
+}
+.adv-block-upper{
+    width: 100%;
+    height: 331px;
+    background-color: #000;
+    margin-bottom: 16px;
+}
+
+.adv-block-lower{
+    width: 100%;
+    height: 228px;
+    background-color: #000;
+}
+
+
+.post-image img, img.post-image{
+    display: block;
+    width: 100%;
+}
+
+h3.post-title{
+    text-transform: uppercase;
+    font-size: 22px;
+    font-family: impact;
+    margin-bottom: 5px;
+    margin-top: 0;
+}
+
+span.persona{
+    font-family: verdana;
+    text-transform: uppercase;
+    color: #979596;
+    font-size: 14px;
+
+}
+
+p.post-content{
+    margin-top: 30px;
+    margin-bottom: 16px;
+    font-size: 14px;
+    font-family: Verdana;
+}
+
+a.read-more{
+    display: block;
+    text-align: right;
+    color: #ff008a;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+/* block authors*/
+
+.best-authors{
+    font-family: Arial;
+    font-size: 24px;
+    text-transform: uppercase;
+    line-height: 150%;
+
+}
