--- a/style.css
+++ b/style.css
@@ -204,9 +204,9 @@ a.read-more{
     color: #fff;
 }
 
-.grey{
-    color: #c2c1c1;
-}
+/*.grey{*/
+    /*color: #c2c1c1;*/
+/*}*/
 
 /* Styles max */
 
@@ -215,7 +215,7 @@ h4 {
     font-family: "Arial Narrow", sans-serif;
 }
 
-grey {
+.grey {
     color: #979596;
 }
 
@@ -225,9 +225,6 @@ grey {
 }
 
 .journal {
-    /*display: inline-block;*/
-    /*float: none;*/
-    /*vertical-align: middle;*/
     padding-top: 30%;
 }
 
@@ -248,7 +245,39 @@ grey {
 }
 
 .journTextContent {
-    padding-top: 40%;
+    padding-top: 10%;
+}
+
+@media (max-width: 768px) {
+    .mazafaka {
+        position: relative;
+        width: 100%;
+        font-size: 1.5em;
+    }
+    .journal {
+        padding-top: 5%;
+    }
+
+    .journal img {
+        position: static;
+        width: 30%;
+        margin: auto;
+    }
+
+    .journTextContent {
+        padding-top: 0;
+        text-align: right;
+    }
+
+    .sverhu {
+        top: 5%;
+        left: 7%;
+        z-index: 5;
+    }
+
+    .snizu {
+        display: none;
+    }
 }
 
 .socialNet {
