--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
 
-/*body{*/
-    /*width: 80%;*/
-    /*margin: 0 auto;*/
-/*}*/
-/*Саша зачем поставил ширину для body?? вся верстка поплыла, достаточно того,что мы основным div задаем класс container, который делает ширину 80%*/
-
 #header{
     height: 310px;
     background: url("img/header.jpg");
@@ -56,42 +50,78 @@
     top: 6px;
 }
 
+
+#top_gobananas{
+    display: block;
+    width: 40%;
+    margin: 50px auto;
+    min-height: 35%;
+}
+
+
+
+
+
 #top_menu{
     width: 100%;
     position: absolute;
     height: 46px;
     bottom: 0;
     background: #000;
-    color: #ffffff;
+
 
 }
 
+#menu_a{
+    /*background: #979596;*/
+    width: 90%;
+    height: 46px;
+    padding-left: 5px;
+    list-style-type: none;
+}
+
+
+
 #menu_a li{
-    display: block;
     float: left;
-    padding:  10px;
+    text-transform: uppercase;
+    display: block;
+    /*background: pink;*/
+    height: 46px;
+    width: 14%;
+}
+
+#menu_a li a{
+    color: #ffffff;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+
+
+#menu_a li a:hover{
+    color: #ff008a;
+}
+
+
+#pdf_load{
+    position: absolute;
+    top: 6px;
+    right: 15px;
+}
+
+
+
+#short_post{
+    margin-top: 20px;
+}
+
+.title_blog{
     text-transform: uppercase;
 }
 
 
 
 
-
-
-
-
-
-
-
-
-.alex{
-    height: 300px;
-    width: 100%;
-    background: #8bc55e;
-    text-align: center;
-    line-height: 300px;
-    font-size: 30px;
-}
 
 .kety{
     height: 300px;
