--- a/style.css
+++ b/style.css
@@ -144,6 +144,13 @@
 /*=============styles Katya====== posts, adv blocks, authors==========*/
 /*===================================================================*/
 
+.fixer.row{
+    margin-right: 0;
+    margin-left: 0;
+    background-color: #424242;
+}
+
+
 .margin-top-40{
     margin-top: 40px;
 }
@@ -211,9 +218,6 @@ a.read-more{
 
 /* block authors*/
 
-#authors{
-    background-color: #424242;
-}
 .best-authors{
     font-family: Arial;
     font-size: 24px;
