--- a/style.css
+++ b/style.css
@@ -163,6 +163,11 @@
     margin-bottom: 16px;
 }
 
+.margin-top-16{
+    margin-top: 16px;
+}
+
+
 .pink{
     color: #ff008a;
 }
@@ -170,13 +175,14 @@
     width: 100%;
     height: 331px;
     background-color: #000;
-    margin-bottom: 16px;
+    margin: 16px auto;
 }
 
 .adv-block-lower{
     width: 100%;
-    height: 228px;
+    height: 100px;
     background-color: #000;
+    margin: 16px auto;
 }
 
 
@@ -358,4 +364,8 @@ h4 {
     display: inline-block;
     width: 21px;
     margin: 5px;
+}
+
+#blogs {
+    background-color: #f7f7f7;
 }
